#MVP FIX: Ajustes